# Yggdrasil-Project

./: pyproject.toml
notebooks/labs/databricks_studies/: Estudos DataBricks.ipynb
notebooks/labs/teste_repo/: 00. Instalando & Utilizando um Repositório.ipynb
notebooks/labs/titanic/: 01 - Leitura da Base de Dados.ipynb
yggdrasil/: utils.py
