[build-system]
requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.backends.legacy:build"

[project] # Informações a respeito do pacote
name = "yggdrasil"
version = "0.0.1"
description = "Árvore de decisão interativa para Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",   # adicione suas dependências aqui
]

[project.urls]
Homepage = "https://github.com/zheage/Yggdrasil-Project"